--- a/Client/index.html
+++ b/Client/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../Client/css/style.css">
     <link rel="stylesheet" href="../node_modules/jstree/dist/themes/default/style.min.css">
+    <link rel="stylesheet" href="../node_modules/toastr/build/toastr.css">
+
     <base href="/">
 </head>
     <body>
@@ -20,6 +22,7 @@
         <script src="../node_modules/angular/angular.min.js"></script>
         <script src="../node_modules/angular-route/angular-route.min.js"></script>
         <script src="../node_modules/angular-mocks/angular-mocks.js"></script>
+        <script src="../node_modules/toastr/build/toastr.min.js"></script>
         <script src="/Client/app.js"></script>
         <script src="/Client/controllers/testBuilderController.js"></script>
         <script src="/Client/common/commonService.js"></script>
